syntax = "proto3";
package candy.meta;

option go_package = "meta";

import "common.proto";


service Gate {
    rpc Register (UserRegisterRequest) returns (UserRegisterResponse);
    rpc UpdateUserInfo (UpdateUserInfoRequest) returns (UpdateUserInfoResponse);

    rpc Login (UserLoginRequest) returns (UserLoginResponse);
    rpc Logout (UserLogoutRequest) returns (UserLoginResponse);

    rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
    rpc RecvMessage (RecvMessageRequest) returns (RecvMessageResponse);

    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);

    rpc UploadImage (UploadImageRequest) returns (UploadImageResponse);
    rpc DownloadImage (DownloadImageRequest) returns (DownloadImageResponse);


    // server interface.
    rpc Notice (NoticeRequest) returns (NoticeResponse);

}




message UserRegisterRequest {
    string User = 1;
    string Password = 2;
}

message UserRegisterResponse {
    ResponseHeader header = 1;
    int64 ID = 2;
}

message UpdateUserInfoRequest {
    string Nickname = 1;
    bytes Avatar = 2;
}

message UpdateUserInfoResponse {
    ResponseHeader header = 1;
}


message HeartbeatRequest {}
message HeartbeatResponse {}

message UserLoginRequest {
    string User = 1;
    string Password = 2;
}

message UserLoginResponse {
    ResponseHeader header = 1;
    int64 ID = 2;
}


message UserLogoutRequest {
}

message UserLogoutResponse {
    ResponseHeader header = 1;
}


message SendMessageRequest {
    Message Msg = 1;
}

message SendMessageResponse {
    ResponseHeader header = 1;
    int64 MessageID = 2;
}

message RecvMessageRequest {
    int64 LastMessageID = 1;
}

message RecvMessageResponse {
    repeated Message MsgList = 1;
}

message UserMessageList {
    repeated Message MsgList = 1;
}


message UploadImageRequest {
    bytes Image = 1;
}

message UploadImageResponse {
    ResponseHeader header = 1;
    int64 ImageID = 2;
}

message DownloadImageRequest {
    repeated int64 ImageID = 1;
}

message DownloadImageResponse {
    repeated bytes Image = 1;
}

message NoticeRequest {
    int64 ChannelID = 1;
    Message Msg = 2;
}


message NoticeResponse {
    ResponseHeader header = 1;
}

